--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
